--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,24 +7,7 @@
               <hr class="intro-divider">
               <br/>
               <font size="4px">
-                <p><font size="5px">Hello,</font></p>
-                <p>My name is <font color="DarkTurquoise">Wesley</font>.</p>
-                <p><i class="fa fa-terminal"></i></p>
-                <p>I study <font color="HotPink">Computer Science & Neuroscience</font>.</p> 
-                <p><i class="fa fa-terminal"></i></p>
-                <p>I love <font color="DarkSlateGray">technology</font> and see a future filled with <font color="SlateGray"> Intelligent Machines &nbsp  <i class="fa fa-cogs"></i></font></p>
-                <p>I believe AI can expanding <font color="Tomato">human intelligence</font> for greater goods.</p>
-                <p><i class="fa fa-terminal"></i></p>
-                <p>I have a strong background in </p>
-                <p><font color="GoldenRod">Software Engineering &nbsp  <i class="fa fa-code"></i> </font> &nbsp &nbsp &nbsp <font color="LimeGreen">Machine Learning &nbsp  <i class="fa fa-area-chart"></i></font> &nbsp &nbsp &nbsp <font color="MediumTurquoise"> Cognitive Science &nbsp  <i class="fa fa-user"></i></font> </p>
-                <p>and I am looking forward to be part of that intelligence. </p>
-                <p><i class="fa fa-anchor"></i></p>
-                <br/>
-              </font>
-            </div>
-            <div class="col-md-3 col-md-push-9" align="center">
-              <font size="2px">
-                <p><a id="change_to_star_war" href="#" onClick="return false;">Star Wars Edition <i class="fa fa-space-shuttle"></i></a></p>
+                <p>I am a third year PhD student at <a href="http://ntu.edu.sg">NTU Singapore</a> working with <a href="http://www.ntu.edu.sg/home/wslin/"> Prof. Weisi Lin</a> in the Multimedia Graduate Lab. My research focuses on modelling the influence of human factors, such as personality and culture, on users' experience of affect, perception of quality and enjoyment in multimedia.</p>
               </font>
             </div>
         </div>
