--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,8 +18,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
-    <!-- Custom Logo for Icon Shortcut-->
-    <link rel="shortcut icon" href="https://raw.githubusercontent.com/WesleyyC/wesleyyc.github.io/master/img/logo/logo.ico">
+    <!-- Custom Logo for Icon Shortcut
+    <link rel="shortcut icon" href="https://raw.githubusercontent.com/WesleyyC/wesleyyc.github.io/master/img/logo/logo.ico">-->
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
