--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <img class="navbar-brand page-scroll" src="img/logo/logo.png" alt="">
+            <!--<img class="navbar-brand page-scroll" src="img/logo/logo.png" alt="">-->
             <a class="navbar-brand page-scroll" href="#home">{{ site.title}}</a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -19,14 +19,14 @@
                     <a class="page-scroll" href="#about">About</a>
                 </li> 
                 <li>
-                    <a class="page-scroll" href="#instagram">Life</a>
-                </li>  
-                <li>
                     <a class="page-scroll" href="#experiences">Experiences</a>
                 </li>           
                 <li>
                     <a class="page-scroll" href="#projects">Projects</a>
                 </li>
+                <li>
+                    <a class="page-scroll" href="#instagram">Life</a>
+                </li>  
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
                 </li>
