--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -4,9 +4,9 @@
 
 			<div class="row">
 				<div class="col-lg-4">
-					<h2>Grab a Drink?</h2>
-					<br>
-					<p>I love the New Orlean Iced Coffee from <a href="https://bluebottlecoffee.com" target="_blank">Blue Bottle <i class="fa fa-coffee"></i></a> <br>and the classic milk tea from <a href="http://www.bobaguys.com/" target="_blank">Boba Guys !</a> </p>
+					
+					
+					<p>E-Mail is the best way to reach me though there are other options mentioned beside.</p>
 				</div>
 				<div class="col-lg-8">
 					<ul class="list-inline banner-social-buttons">
