--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
 	<!--	{% include instagram.html %} -->
 		{% include experiences.html %}
 		{% include projects.html %}
+		{% include instagram.html %}
 		{% include contact.html %}
 		{% include footer.html %}
 		{% include js.html %}
