--- a/_includes/js.html
+++ b/_includes/js.html
@@ -17,7 +17,7 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-65256806-1', 'auto');
+  ga('create', 'UA-77477931-1', 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -27,11 +27,11 @@
 	var loadButton = document.getElementById('more_link');
     if(typeof window.orientation !== 'undefined'){
       var feed = new Instafeed({
-          clientId: '44022fd2ea504984a80df2abe018f800',
+          clientId: '8b5bdc692c69469cb03755d2d7e1bbf8',
           get: 'user',
-          userId: 314516572,
+          userId: 41911408,
           resolution: 'standard_resolution',
-          accessToken: '314516572.44022fd.6acc0507c0bd4e2eab90528714e67821',
+          accessToken: '41911408.1677ed0.3e7056af205a400cb7fc58af3baa3689',
           sortBy:'most-recent',
           limit: 6,
           after: function(){
@@ -44,11 +44,11 @@
       });
     }else{
       var feed = new Instafeed({
-          clientId: '44022fd2ea504984a80df2abe018f800',
+          clientId: '8b5bdc692c69469cb03755d2d7e1bbf8',
           get: 'user',
-          userId: 314516572,
+          userId: 41911408,
           resolution: 'standard_resolution',
-          accessToken: '314516572.44022fd.6acc0507c0bd4e2eab90528714e67821',
+          accessToken: '41911408.1677ed0.3e7056af205a400cb7fc58af3baa3689',
           sortBy:'most-recent',
           limit: 15,
           after: function(){
@@ -77,19 +77,18 @@
     {
       "@context": "http://schema.org",
       "@type": "Person",
-      "url": "http://www.wesleyq.me/",
-      "image": "https://raw.githubusercontent.com/WesleyyC/wesleyyc.github.io/master/img/profile.jpg",
-      "additionalName": "Wei Qian",
-      "description":"Computer Science Student & AI Enthusiast",
-      "name": "Wesley Wei Qian"
+      "url": "http://chandrasg.github.io/",
+      "image": "https://raw.githubusercontent.com/chandrasg/chandrasg.github.io/master/img/DSC_0032.JPG.jpg",
+      "additionalName": "Sharath Chandra",
+      "description":"PhD Student at NTU Singapore",
+      "name": "Sharath Chandra Guntuku"
       ,
       "sameAs" : [
-        "https://www.facebook.com/wesley.chin0919",
-        "https://www.instagram.com/wesleyy.c/",
-        "https://www.linkedin.com/in/wesleychin0919",
-        "https://plus.google.com/u/0/+WesleyWeiQian",
-        "https://github.com/WesleyyC",
-        "https://twitter.com/WesleyQian"
+        "https://www.instagram.com/sharathchandra92/",
+        "https://www.linkedin.com/in/sharathchandra92",
+        "https://plus.google.com/u/0/+SharathChandraGuntuku",
+        "https://github.com/sharathchandra92",
+        "https://www.researchgate.net/profile/Sharath_Chandra_Guntuku/"
       ]
     }
 </script>
