--- a/_includes/about.html
+++ b/_includes/about.html
@@ -7,7 +7,8 @@
               <hr class="intro-divider">
               <br/>
               <font size="4px">
-                <p>I am a third year PhD student at <a href="http://ntu.edu.sg">NTU Singapore</a> working with <a href="http://www.ntu.edu.sg/home/wslin/"> Prof. Weisi Lin</a> in the Multimedia Graduate Lab. My research focuses on modelling the influence of human factors, such as personality and culture, on users' experience of affect, perception of quality and enjoyment in multimedia.</p>
+                <p>I am a third year PhD student at <a href="http://ntu.edu.sg">NTU Singapore</a> working with <a href="http://www.ntu.edu.sg/home/wslin/"> Prof. Weisi Lin</a> in the Multimedia Graduate Lab.</p> 
+                <p>My research focuses on modelling the influence of human factors, such as personality and culture, on users' experience of affect, perception of quality and enjoyment in multimedia.</p>
               </font>
             </div>
         </div>
