--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,8 +6,8 @@
 		{% include header.html %}
 		{% include about.html %}
 	<!--	{% include instagram.html %} -->
-		{% include experiences.html %}
-		{% include projects.html %}
+	<!--		{% include experiences.html %}-->
+	<!--		{% include projects.html %}-->
 		{% include instagram.html %}
 		{% include contact.html %}
 		{% include footer.html %}
