--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,13 +19,13 @@
                     <a class="page-scroll" href="#about">About</a>
                 </li> 
                 <li>
-                    <a class="page-scroll" href="#experiences">Experiences</a>
+                    <a class="page-scroll" href="#experiences">Experience</a>
                 </li>           
                 <li>
-                    <a class="page-scroll" href="#projects">Projects</a>
+                    <a class="page-scroll" href="#projects">Code</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#instagram">Life</a>
+                    <a class="page-scroll" href="#instagram">Life in Photos</a>
                 </li>  
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
