--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,11 +13,11 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a class="page-scroll" href="#experiences">Experiences</a>
+                        <a class="page-scroll" href="#experiences">Experience</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a class="page-scroll" href="#projects">Projects</a>
+                        <a class="page-scroll" href="#projects">Code</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                      <li>
@@ -32,7 +32,6 @@
             </div>
         </div>
         <div align="center" class="row">
-            <p class="copyright text-muted small">Copyright &copy; {{ site.title }} 2015-2016. All Rights Reserved</p>
             <p class="copyright text-muted small">Last updated in May, 2016.</p>
         </div>
     </div>
