--- a/_includes/header.html
+++ b/_includes/header.html
@@ -39,8 +39,8 @@
 
 <section id="home">
 <!-- Header -->
-    <div id="particles-js">
-    	<div id = "particles-header" class="intro-header">
+    
+    	<div class="intro-header">
     		<div class="container">
     			<div class="row">
     				<div class="col-lg-12">
@@ -64,7 +64,7 @@
                 </div>
     		</div>
         </div>
-    </div>
+    
     		<!-- /.container -->
     	<!-- /.intro-header -->
     <!-- /.partical-js -->
