--- a/_includes/experiences.html
+++ b/_includes/experiences.html
@@ -13,13 +13,15 @@
                     <div class="clearfix"></div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-5 col-sm-6">
+                    <div class="col-lg-8 col-sm-6">
                       <!--  <h2 class="section-heading">{{ post.title }}</h2> -->
                         <div class="lead">{{ post.content }}</div>
                     </div>
+                    <!--
                     <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                         <img class="img-responsive center-block" src="img/exp/{{ post.img }}" alt="">
                     </div>
+                    -->
                 </div>
 
             </div>
@@ -39,10 +41,10 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                        <h2 class="section-heading">{{ post.title }}</h2>
+                    <!--    <h2 class="section-heading">{{ post.title }}</h2> -->
                         <div class="lead">{{ post.content }}</div>
                     </div>
-                    <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <div class="col-lg-8 col-sm-pull-6  col-sm-6">
                         <img class="img-responsive center-block" src="img/exp/{{ post.img }}" alt="">
                     </div>
                 </div>
