--- a/_includes/experiences.html
+++ b/_includes/experiences.html
@@ -8,7 +8,7 @@
 
             <div class="container">
                 <div class="row">
-                    <h2 class="category-heading">{{ post.category }}</h2>
+                    <h2 class="category-heading">{{ post.title }}</h2>
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                 </div>
@@ -35,7 +35,7 @@
 
             <div class="container">
                 <div class="row">
-                    <h2 class="category-heading">{{ post.category }}</h2>
+                    <h2 class="category-heading">{{ post.title }}</h2>
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                 </div>
