--- a/_includes/experiences.html
+++ b/_includes/experiences.html
@@ -2,8 +2,8 @@
 <!-- Page Content -->
 {% for post in site.posts reversed %}
     {% if post.category contains 'Experience'%}
-      {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
-        {% if thecycle == 'odd' %}
+    <!--  {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
+        {% if thecycle == 'odd' %} -->
         <div class="content-section-a">
 
             <div class="container">
@@ -29,7 +29,7 @@
 
         </div>
         <!-- /.content-section-a -->
-        {% else %}
+        <!-- {% else %} -->
 
         <div class="content-section-b">
 
@@ -54,7 +54,7 @@
 
         </div>
         <!-- /.content-section-b -->
-        {% endif %}
+       <!-- {% endif %} -->
     {% endif %}
 {% endfor %}
 </section>
