--- a/_includes/experiences.html
+++ b/_includes/experiences.html
@@ -30,7 +30,7 @@
         </div>
         <!-- /.content-section-a -->
         <!-- {% else %} -->
-
+        <!-- 
         <div class="content-section-b">
 
             <div class="container">
@@ -41,7 +41,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                    <!--    <h2 class="section-heading">{{ post.title }}</h2> -->
+                        <h2 class="section-heading">{{ post.title }}</h2> 
                         <div class="lead">{{ post.content }}</div>
                     </div>
                     <div class="col-lg-8 col-sm-pull-6  col-sm-6">
@@ -50,11 +50,13 @@
                 </div>
 
             </div>
-            <!-- /.container -->
+            
+           
 
         </div>
+        -->
         <!-- /.content-section-b -->
-       <!-- {% endif %} -->
+       <!-- {% endif %} --> 
     {% endif %}
 {% endfor %}
 </section>
