--- a/_includes/experiences.html
+++ b/_includes/experiences.html
@@ -2,8 +2,8 @@
 <!-- Page Content -->
 {% for post in site.posts reversed %}
     {% if post.category contains 'Experience'%}
-     {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
-        {% if thecycle == 'odd' %} 
+      {% capture thecycle %}{% cycle 'odd', 'even' %}{% endcapture %}
+        {% if thecycle == 'odd' %}
         <div class="content-section-a">
 
             <div class="container">
@@ -29,8 +29,8 @@
 
         </div>
         <!-- /.content-section-a -->
-         {% else %} 
-         
+        {% else %}
+
         <div class="content-section-b">
 
             <div class="container">
@@ -41,22 +41,20 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
-                        <h2 class="section-heading">{{ post.title }}</h2> 
+                    <!--    <h2 class="section-heading">{{ post.title }}</h2> -->
                         <div class="lead">{{ post.content }}</div>
                     </div>
-                    <div class="col-lg-5 col-sm-pull-6  col-sm-8">
+                    <div class="col-lg-8 col-sm-pull-6  col-sm-6">
                         <img class="img-responsive center-block" src="img/exp/{{ post.img }}" alt="">
                     </div>
                 </div>
 
             </div>
-            
-           
+            <!-- /.container -->
 
         </div>
-        
         <!-- /.content-section-b -->
-        {% endif %} 
+        {% endif %}
     {% endif %}
 {% endfor %}
 </section>
