--- a/_includes/experiences.html
+++ b/_includes/experiences.html
@@ -40,13 +40,15 @@
                     <div class="clearfix"></div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-8 col-lg-offset-1 col-sm-push-4  col-sm-6">
+                    <div class="col-lg-8 col-sm-6">
                     <!--    <h2 class="section-heading">{{ post.title }}</h2> -->
                         <div class="lead">{{ post.content }}</div>
                     </div>
+                    <!--
                     <div class="col-lg-8 col-sm-pull-8  col-sm-6">
                         <img class="img-responsive center-block" src="img/exp/{{ post.img }}" alt="">
                     </div>
+                    -->
                 </div>
 
             </div>
