--- a/_includes/header.html
+++ b/_includes/header.html
@@ -22,7 +22,7 @@
                     <a class="page-scroll" href="#experiences">Experience</a>
                 </li>           
                 <li>
-                    <a class="page-scroll" href="#projects">Code</a>
+                    <a class="page-scroll" href="#projects">Projects</a>
                 </li>
                 <li>
                     <a class="page-scroll" href="#instagram">Life in Photos</a>
