--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,11 +17,11 @@
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
-                        <a class="page-scroll" href="#projects">Code</a>
+                        <a class="page-scroll" href="#projects">Projects</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                      <li>
-                        <a class="page-scroll" href="#instagram">Life</a>
+                        <a class="page-scroll" href="#instagram">Life in Photos</a>
                     </li>
                     <li class="footer-menu-divider">&sdot;</li>
                     <li>
