--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,8 +1,7 @@
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
         <div id="about_change" class="row">
-            <div class="col-lg-10 col-lg-offset-1">
-              <br/><br/>
+            <div class="col-lg-7 col-lg-offset-1">
               <h2>About Me.</h2>
               <hr class="intro-divider">
               <br/>
@@ -11,5 +10,8 @@
                 <p>My research focuses on modelling the influence of human factors, such as personality and culture, on users' experience of affect, perception of quality and enjoyment in multimedia.</p>
               </font>
             </div>
+            <div class="col-lg-4 col-lg-offset-1">
+                <img class="img-responsive center-block" src="img/profile.jpg" alt="">
+            </div>    
         </div>
     </section>
