--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,7 +1,9 @@
     <!-- About Section -->
     <section id="about" class="container content-section text-center">
-        <div id="about_change" class="row">
-            <div class="col-lg-7 col-lg-offset-1">
+        <div id="about_change" class="container">
+            <div class="row">
+            <!-- <div class="col-lg-7 col-lg-offset-1"> -->
+            <div class="col-lg-7 col-lg-sm-6">                
               <h2>About Me.</h2>
               <hr class="intro-divider">
               <br/>
@@ -10,8 +12,11 @@
                 <p>My research focuses on modelling the influence of human factors, such as personality and culture, on users' experience of affect, perception of quality and enjoyment in multimedia.</p>
               </font>
             </div>
-            <div class="col-lg-4 col-lg-offset-1">
+            </div>
+            <div class="row">
+            <div class="col-lg-4 col-lg-sm-6">
                 <img class="img-responsive center-block" src="img/profile.jpg" alt="">
             </div>    
+            </div>
         </div>
     </section>
