--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,9 +12,7 @@
                 <p>My research focuses on modelling the influence of human factors, such as personality and culture, on users' experience of affect, perception of quality and enjoyment in multimedia.</p>
               </font>
             </div>
-            </div>
-            <div class="row">
-            <div class="col-lg-4 col-lg-sm-6">
+            <div class="col-lg-4 col-lg-offset-2 col-lg-sm-6">
                 <img class="img-responsive center-block" src="img/profile.jpg" alt="">
             </div>    
             </div>
