--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,18 +3,22 @@
         <div id="about_change" class="container">
             <div class="row">
             <!-- <div class="col-lg-7 col-lg-offset-1"> -->
-            <div class="col-lg-7 col-lg-sm-6">                
-              <h2>About Me.</h2>
-              <hr class="intro-divider">
-              <br/>
-              <font size="4px">
-                <p>I am a third year PhD student at <a href="http://ntu.edu.sg">NTU Singapore</a> working with <a href="http://www.ntu.edu.sg/home/wslin/"> Prof. Weisi Lin</a> in the Multimedia Graduate Lab.</p> 
-                <p>My research focuses on modelling the influence of human factors, such as personality and culture, on users' experience of affect, perception of quality and enjoyment in multimedia.</p>
-              </font>
+                <h2>About Me.</h2>
+                <hr class="intro-divider">
+                div class="clearfix"></div>
             </div>
-            <div class="col-lg-4 col-lg-offset-2 col-lg-sm-6">
-                <img class="img-responsive center-block" src="img/profile.jpg" alt="">
-            </div>    
+            <br/>
+            <div class="row">
+                <div class="col-lg-7 col-lg-sm-6">                
+                    <font size="4px">
+                    <p>I am a third year PhD student at <a href="http://ntu.edu.sg">NTU Singapore</a> working with <a href="http://www.ntu.edu.sg/home/wslin/"> Prof. Weisi Lin</a> in the Multimedia Graduate Lab.</p> 
+                    <p>My research focuses on modelling the influence of human factors, such as personality and culture, on users' experience of affect, perception of quality and enjoyment in multimedia.</p>
+                    </font>
+                </div>
+            
+                <div class="col-lg-4 col-lg-offset-2 col-lg-sm-6">
+                    <img class="img-responsive center-block" src="img/profile.jpg" alt="">
+                </div>    
             </div>
-        </div>
+        </div>    
     </section>
