--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,7 +5,7 @@
             <!-- <div class="col-lg-7 col-lg-offset-1"> -->
                 <h2>About Me.</h2>
                 <hr class="intro-divider">
-                div class="clearfix"></div>
+                <div class="clearfix"></div>
             </div>
             <br/>
             <div class="row">
