--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -13,7 +13,7 @@
                     <div class="clearfix"></div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-7 col-sm-6">
+                    <div class="col-lg-9 col-sm-8">
                         <h2 class="section-heading">{{ post.title }}</h2>
                         <div class="lead">{{ post.content }}</div>
                     </div>
@@ -40,7 +40,8 @@
                     <div class="clearfix"></div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-7 col-lg-offset-1 col-sm-push-3  col-sm-6">
+                    <div class="col-lg-9 col-sm-8">
+                    <!-- <div class="col-lg-7 col-lg-offset-1 col-sm-push-3  col-sm-6"> -->
                         <h2 class="section-heading">{{ post.title }}</h2>
                         <div class="lead">{{ post.content }}</div>
                     </div>
