--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
                     </font>
                 </div>
             
-                <div class="col-lg-4 col-lg-offset-1 col-lg-sm-4">
+                <div class="col-lg-4 col-lg-offset-1 col-lg-sm-4 col-lg-sm-3">
                     <img class="img-responsive center-block" src="img/profile.jpg" alt="Lost Image!" style="width: 50%; height: 50%">
                 </div>    
             </div>
