--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,7 +18,7 @@
                 </div>
             
                 <div class="col-lg-6 col-lg-offset-1 col-lg-sm-6 col-lg-sm-6">
-                    <img class="img-responsive center-block" src="img/profile.jpg" alt="Lost Image!">
+                    <img class="img-responsive center-block" src="img/profile2.jpg" alt="Lost Image!">
                 </div>    
             </div>
         </div>    
