--- a/_includes/about.html
+++ b/_includes/about.html
@@ -17,7 +17,7 @@
                     </font>
                 </div>
             
-                <div class="col-lg-6 col-lg-offset-1 col-lg-sm-5 col-lg-sm-5">
+                <div class="col-lg-6 col-lg-offset-1 col-lg-sm-4">
                     <img class="img-responsive center-block" src="img/profile2.jpg" alt="Lost Image!">
                 </div>    
             </div>
