--- a/_includes/about.html
+++ b/_includes/about.html
@@ -18,7 +18,7 @@
                 </div>
             
                 <div class="col-lg-5 col-lg-offset-1 col-lg-sm-4">
-                    <img class="img-responsive center-block" src="img/profile2.jpg" alt="Lost Image!" width="75%" height="75%">
+                    <img class="img-responsive center-block" src="img/profile.jpg" alt="Lost Image!" width="75%" height="75%">
                 </div>    
             </div>
         </div>    
