--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,7 @@
                     <a class="page-scroll" href="#projects">Projects</a>
                 </li>
                 <li>
-                    <a class="page-scroll" href="#instagram">Life in Photos</a>
+                    <a class="page-scroll" href="#instagram">Photography</a>
                 </li>  
                 <li>
                     <a class="page-scroll" href="#contact">Contact</a>
