--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -6,7 +6,7 @@
 				<div class="col-lg-4">
 					
 					
-					<p>EMail is the best way to reach me <br> though there are other options mentioned beside.</p>
+					<p>E-Mail is the best way to reach me <br> though there are other options mentioned beside.</p>
 				</div>
 				<div class="col-lg-8">
 					<ul class="list-inline banner-social-buttons">
